@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-15T16:23:36Z",
-  "count" : 3,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2022-09-16T01:56:32Z",
+  "count" : 4,
+  "count_minmax" : [ 2, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 3,
   "uniques_minmax" : [ 2, 3 ],
   "uniques_decinc" : [ -0, +3 ]
