@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-15T16:23:36Z",
+  "timestamp" : "2022-09-16T01:56:32Z",
   "count_outdated" : 520,
   "uniques_outdated" : 301,
-  "count" : 549,
+  "count" : 550,
   "uniques" : 317,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
+      "count": 4,
+      "count_minmax": [ 2, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ]
     }
