@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 30,
   "uniques": 6,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 3
     }
   ]
