@@ -1,3 +1,11 @@
+2022-09-16T01:56:32Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3064907578
+* notice: last 14d: unq all: 6 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 301 520 / 317 549
+* notice: next accum: outdated-unq outdated-all / unq all: 301 520 / 317 550
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2022-09-15]
+
 2022-09-15T16:23:36Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3062070815
 * notice: last 14d: unq all: 6 29
